--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         <div class="nine">
             <p>Okay, kasih tau ya kalau kamu suka hihi</p>
-            <p id="replay">Or click, kalau kamu mau ulang untuk liat kagi.</p>
+            <p id="replay">Or click, kalau kamu mau ulang untuk liat lagi.</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
